A minor overhaul of the "editing post metadata from calendar" functionality, In need of some work, but overall should be less buggy then the first time around.
Add relative position to day items on calendar.

Fix up overlay opening and closing, tweak calendar.js to use $ instaed of jQueryinside doc.ready.

Fix undefined warning.

Fix issue where the datetimepicker when activated at the top of the calendar gets the month picking section cut off.

When flipping between static and editable metadata, make sure the correct editable dropdown element is selected.

Add user permissions check for quick editing calendar metadata.

--- a/common/css/edit-flow-admin.css
+++ b/common/css/edit-flow-admin.css
@@ -3,3 +3,7 @@
 	width: 16px;
 	height: 16px;
 }
+
+#ui-datepicker-div {
+	margin-top: 30px;
+}
